# zombie-model

./: LICENSE  README.md  example_user.py  pyproject.toml  zombiemodel.py
colab/: ZombieModel.ipynb
model/: __init__.py  config.json  zombie_model.pkl
