[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zombie-generator"
version = "0.1.0"
description = "A neural network-based zombie text generator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jason Ross", email = "algorythm@gmail.com"}
]
dependencies = [
    "numpy>=2.2.3",
    "torch>=2.5.0,<2.6.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[project.scripts]
zombie-generate = "zombiemodel:main"

[tool.setuptools]
py-modules = ["zombiemodel"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest]
testpaths = ["tests"]
